# l3_footstep_planning

./: .gitignore
l3_footstep_planner/: CMakeLists.txt  package.xml
l3_footstep_planner/config/: bipedal_plugin_sets.yaml  bipedal_robot.yaml
l3_footstep_planner/config/planner/: bipedal_planner_params.yaml
l3_footstep_planner/include/l3_footstep_planner/: environment_parameters.h  footstep_planner.h  footstep_planner_environment.h  footstep_planner_node.h  pattern_planner.h  planning_feedback_handler.h
l3_footstep_planner/launch/: footstep_planner_test_bipedal.launch  footstep_planner_test_quadrupedal.launch
l3_footstep_planner/src/: environment_parameters.cpp  footstep_planner.cpp  footstep_planner_environment.cpp  footstep_planner_node.cpp  pattern_planner.cpp  planning_feedback_handler.cpp
l3_footstep_planner/src/state_space/: state_space.cpp
l3_footstep_planning/: CMakeLists.txt  package.xml
l3_footstep_planning/config/: bipedal_plugin_sets.yaml  bipedal_robot.yaml  default_plugin_sets.yaml  pattern_generator_config.yaml  planner  quadrupedal_plugin_sets.yaml  quadrupedal_robot.yaml  robot_params.yaml
l3_footstep_planning/config/planner/: quadrupedal_planner_params.yaml
l3_footstep_planning/config/rviz/: default.rviz
l3_footstep_planning/launch/: execute_step_plan_rqt.launch  footstep_planner_test_bipedal.launch  footstep_planner_test_quadrupedal.launch  footstep_planning_basics.launch  global_footstep_planner_test.launch  parameter_editor_rqt.launch  pattern_generator_test.launch  rviz.launch  rviz_footstep_planning.launch  step_interface_rqt.launch
l3_footstep_planning/maps/: RCGO2011_Hector_Mission4_2.yaml
l3_footstep_planning/scripts/: execute_step_plan_rqt  parameter_editor_rqt  pattern_generator_rqt  step_interface_rqt
l3_footstep_planning_libs/: CMakeLists.txt  package.xml
l3_footstep_planning_libs/include/l3_footstep_planning_libs/: hash.h  helper.h  math.h  typedefs.h
l3_footstep_planning_libs/src/: hash.cpp  helper.cpp  math.cpp
l3_footstep_planning_libs/src/modeling/: basestep.cpp  floating_base_database.cpp  floating_base_id.cpp  floating_base_step.cpp  floating_base_step_action.cpp  foot_step.cpp  foot_step_action.cpp  foothold_database.cpp  foothold_id.cpp  footstep.cpp  planning_state.cpp  state.cpp  state_database.cpp  state_id.cpp  state_space_manager.cpp  step_plan.cpp  transition.cpp  transition_database.cpp  transition_id.cpp
l3_footstep_planning_libs/src/types/: heuristic_lookup_table.cpp
l3_footstep_planning_libs/test/launch/: utest.test
l3_footstep_planning_libs/test/src/: floating_base_hashing_utest.cpp  foothold_database_utest.cpp  foothold_hashing_utest.cpp  helper_utest.cpp  math_utest.cpp  msgs_test_helper.cpp  state_database_utest.cpp  state_hashing_utest.cpp  step_plan_utest.cpp  transition_database_utest.cpp  utest.cpp
l3_footstep_planning_msgs/: CMakeLists.txt  package.xml  setup.py
l3_footstep_planning_msgs/action/: EditStep.action  ExecuteStepPlan.action  GenerateFeetPose.action  GetStepPlan.action  SetStepPlan.action  StepPlanRequest.action  StitchStepPlan.action  UpdateFeet.action  UpdateFoot.action  UpdateStepPlan.action
l3_footstep_planning_msgs/include/l3_footstep_planning_msgs/: footstep_planning_msgs.h
l3_footstep_planning_msgs/msg/: EditStep.msg  ErrorStatus.msg  FeetPoseRequest.msg  PatternGeneratorParameters.msg  PatternParameters.msg  PlanningFeedback.msg  PlanningStatistics.msg  StepPlan.msg  StepPlanFeedback.msg  StepPlanRequest.msg  UpdateMode.msg
l3_footstep_planning_msgs/src/: footstep_planning_msgs.cpp
l3_footstep_planning_msgs/src/l3_footstep_planning_msgs/: footstep_planning_msgs.py  parameter.py  serialization.py
l3_footstep_planning_msgs/srv/: EditStepService.srv  GenerateFeetPoseService.srv  GetStepPlanService.srv  PatternGeneratorParametersService.srv  SetStepPlanService.srv  StepPlanRequestService.srv  StitchStepPlanService.srv  TransformFeetPosesService.srv  TransformFootPoseService.srv  TransformStepPlanService.srv  UpdateFeetService.srv  UpdateFootService.srv  UpdateStepPlanService.srv
l3_footstep_planning_plugins/: CMakeLists.txt  package.xml  plugins.xml
l3_footstep_planning_plugins/src/aggregator/: heuristic.cpp  hfs_heuristic.cpp  post_processor.cpp  reachability.cpp  state_generator.cpp  step_cost_estimator.cpp  use_mask_generator.cpp  world_model.cpp
l3_footstep_planning_plugins/src/base/: collision_check_grid_map_plugin.cpp  footstep_planning_plugin.cpp  heuristic_plugin.cpp  hfs_heuristic_plugin.cpp  hlut_heuristic_plugin.cpp  post_process_plugin.cpp  reachability_plugin.cpp  state_generator_plugin.cpp  step_cost_estimator_plugin.cpp  terrain_model_plugin.cpp  use_mask_generator_plugin.cpp  world_model_plugin.cpp
l3_footstep_planning_plugins/src/std/: step_range_polygon.cpp
l3_footstep_planning_tools/: CMakeLists.txt  package.xml
l3_footstep_planning_tools/include/l3_footstep_planning_tools/: feet_pose_generator.h  feet_pose_generator_client.h  feet_pose_generator_node.h  foot_pose_transformer.h  foot_pose_transformer_node.h
l3_footstep_planning_tools/launch/: feet_pose_generator.launch  foot_pose_transformer.launch
l3_footstep_planning_tools/src/: feet_pose_generator.cpp  feet_pose_generator_client.cpp  feet_pose_generator_node.cpp  foot_pose_transformer.cpp  foot_pose_transformer_node.cpp
l3_footstep_planning_vis_tools/: CMakeLists.txt  package.xml  plugins.xml  setup.py
l3_footstep_planning_vis_tools/include/l3_footstep_planning_vis_tools/: visualization.h  (+1 more)
l3_footstep_planning_vis_tools/launch/: footstep_planning_vis.launch
l3_footstep_planning_vis_tools/resource/: execute_step_plan.ui
l3_footstep_planning_vis_tools/src/: footstep_planning_vis_node.cpp  visualization.cpp
l3_footstep_planning_widgets/: CMakeLists.txt  package.xml  plugin.xml  setup.py
l3_footstep_planning_widgets/launch/: execute_step_plan_rqt.launch  parameter_editor_rqt.launch  pattern_generator_rqt.launch  step_interface_rqt.launch
l3_footstep_planning_widgets/scripts/: execute_step_plan_rqt  parameter_editor_rqt  pattern_generator_rqt  step_interface_rqt
(+169 files in other folders)
